--- a/index.html
+++ b/index.html
@@ -8,52 +8,7 @@
 </head>
 <body>
 
-    <!-- Logo -->
-    <div class="logo" onclick="toggleMenu()"></div>
-
-    <!-- Mod Menu -->
-    <div class="mod-menu" id="modMenu">
-        <div class="mod-title">Mod Menu</div>
-        
-        <div class="checkbox-container" onclick="toggleCheckbox(this)">
-            <i class="fa-solid fa-crosshairs icon"></i>
-            <div class="checkbox"><i class="fa-solid fa-check"></i></div>
-            <label>Nhẹ tâm</label>
-        </div>
-
-        <div class="checkbox-container" onclick="toggleCheckbox(this)">
-            <i class="fa-solid fa-bullseye icon"></i>
-            <div class="checkbox"><i class="fa-solid fa-check"></i></div>
-            <label>Đạn thẳng</label>
-        </div>
-
-        <div class="checkbox-container" onclick="toggleCheckbox(this)">
-            <i class="fa-solid fa-location-crosshairs icon"></i>
-            <div class="checkbox"><i class="fa-solid fa-check"></i></div>
-            <label>Ghim cổ</label>
-        </div>
-
-        <div class="checkbox-container" onclick="toggleCheckbox(this)">
-            <i class="fa-solid fa-location-crosshairs icon"></i>
-            <div class="checkbox"><i class="fa-solid fa-check"></i></div>
-            <label>Giảm Lố</label>
-        </div>
-
-        <div class="checkbox-container" onclick="toggleCheckbox(this)">
-            <i class="fa-solid fa-bullseye icon"></i>
-            <div class="checkbox"><i class="fa-solid fa-check"></i></div>
-            <label>Nhạy Tâm</label>
-        </div>
-
-        <div class="checkbox-container" onclick="toggleCheckbox(this)">
-            <i class="fa-solid fa-bullseye icon"></i>
-            <div class="checkbox"><i class="fa-solid fa-check"></i></div>
-            <label>Aim 50%</label>
-        </div>
-    </div>
-
-    <!-- Thông báo -->
-    <div id="notification" class="notification"></div>
+    <h1>Đang Ra Mắt App Mới...</h1>
     <script src="script.js"></script>
 
 </body>
